kubernetes/stage/app/migrations.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chack-users-migrations-deployment
  labels:
    app: chack-users-service
    name: chack-users-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chack-users-service
  template:
    metadata:
      labels:
        app: chack-users-service
    spec:
      containers:
        - name: chack-users-service
          image: artemowkin/chack-users-service:latest
          command: ["sh", "-c", "alembic upgrade head"]
